--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
@@ -1,13 +1,17 @@
-# You can change this base image to anything else
-# But make sure to use the correct version of Java
-FROM adoptopenjdk/openjdk11:alpine-jre
+# Use Eclipse Temurin JRE 17 on Alpine (lightweight image)
+FROM eclipse-temurin:17-jre-alpine
 
-# Simply the artifact path
+# Path to the Spring Boot jar (built by Maven/Gradle)
 ARG artifact=target/spring-boot-web.jar
 
+# Set working directory inside container
 WORKDIR /opt/app
 
+# Copy the jar file into the container
 COPY ${artifact} app.jar
 
-# This should not be changed
-ENTRYPOINT ["java","-jar","app.jar"]
+# Expose the app port (default for Spring Boot)
+EXPOSE 8080
+
+# Start the Spring Boot application
+ENTRYPOINT ["java", "-jar", "app.jar"]
