--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
@@ -1,17 +1,10 @@
-# Use Eclipse Temurin JRE 17 on Alpine (lightweight image)
+FROM maven:3.9.2-eclipse-temurin-17 AS build
+WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
+
 FROM eclipse-temurin:17-jre-alpine
-
-# Path to the Spring Boot jar (built by Maven/Gradle)
-ARG artifact=target/spring-boot-web.jar
-
-# Set working directory inside container
 WORKDIR /opt/app
-
-# Copy the jar file into the container
-COPY ${artifact} app.jar
-
-# Expose the app port (default for Spring Boot)
-EXPOSE 8080
-
-# Start the Spring Boot application
+COPY --from=build /app/target/spring-boot-web.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
