--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -37,11 +37,12 @@ pipeline {
       }
       steps {
         script {
-            sh "cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} ."
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                dockerImage.push()
-            }
+            sh """
+             cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+             docker build -t ${DOCKER_IMAGE} .
+             echo $REGISTRY_CREDENTIALS_PSW | docker login -u $REGISTRY_CREDENTIALS_USR --password-stdin
+             docker push ${DOCKER_IMAGE}
+            """
         }
       }
     }
