--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -3,6 +3,7 @@ pipeline {
     docker {
       image 'maven-docker:3.9.2'
       args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+      reuseNode true
     }
   }
   stages {
@@ -51,7 +52,7 @@ pipeline {
             GIT_USER_NAME = "Premateja02"
         }
         steps {
-            Checkout scm
+            checkout scm
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     git config user.email "premateja.karangula@gmail.com"
