--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -47,29 +47,25 @@ pipeline {
       }
     }
     stage('Update Deployment File') {
-        environment {
-            GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
-            GIT_USER_NAME = "Premateja02"
-        }
         steps {
-            checkout scm
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                sh """
-                    cd ${WORKSPACE} || exit 1
-                    git config user.email "premateja.karangula@gmail.com"
-                    git config user.name "Karangula Prema Teja"
+            dir("${WORKSPACE}") {
+                        withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                            sh """
+                                git config user.email "premateja.karangula@gmail.com"
+                                git config user.name "Karangula Prema Teja"
 
-                    BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                                BUILD_NUMBER=${BUILD_NUMBER}
+                                sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
-                    if git diff --quiet; then
-                        echo "No changes to commit"
-                    else
-                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                    fi
-                """
+                                if git diff --quiet; then
+                                    echo "No changes to commit"
+                                else
+                                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                                    git push https://${GITHUB_TOKEN}@github.com/Premateja02/Jenkins-Zero-To-Hero HEAD:main
+                                fi
+                            """
+}
             }
         }
     }
