--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -52,6 +52,7 @@ pipeline {
         }
         steps {
           checkout scm
+          dir('jenkins-practice')
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     git config user.email "premateja.karangula@gmail.com"
