--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -52,7 +52,7 @@ pipeline {
         }
         steps {
           checkout scm
-          dir('jenkins-practice')
+          dir('jenkins-practice'){
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     git config user.email "premateja.karangula@gmail.com"
@@ -64,6 +64,7 @@ pipeline {
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                 '''
             }
+          }
         }
     }
   }
