--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -56,6 +56,7 @@ pipeline {
                 sh '''
                     git config --global user.email "premateja.karangula@gmail.com"
                     git config --global user.name "Karangula Prema Teja"
+                    git config --global --add safe.directory /var/lib/jenkins/workspace/jenkins-practice
                     BUILD_NUMBER=${BUILD_NUMBER}
                     sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
