Update deployment image to version 42

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: premateja/jenkins-practice:replaceImageTag
+        image: premateja/jenkins-practice:42
         ports:
         - containerPort: 8080
