--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -51,6 +51,7 @@ pipeline {
             GIT_USER_NAME = "Premateja02"
         }
         steps {
+           checkout scm
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     git config --global user.email "premateja.karangula@gmail.com"
